Unityプロジェクト作成

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@
 /3DLv3_2023_vs2019/Project/BaseProject/BaseProject/Release
 /3DLv3_2023_vs2019/Project/BaseProject/Release
 /3DLv3_2023_vs2019/Project/BaseProject/Debug
+
+/3DLv4_2024/Graduation Project/.vs
+/3DLv4_2024/Graduation Project/.vsconfig
+/3DLv4_2024/Graduation Project/*.sln
+/3DLv4_2024/Graduation Project/*.csproj
+/3DLv4_2024/Graduation Project/Library
+/3DLv4_2024/Graduation Project/Logs
+/3DLv4_2024/Graduation Project/obj
+/3DLv4_2024/Graduation Project/Temp
+/3DLv4_2024/Graduation Project/UserSettings
