--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -326,6 +326,9 @@
     <Filter Include="ソース ファイル\Game\Field\Object\Gimmick\Number\NumberFloorBase">
       <UniqueIdentifier>{082bb57d-a2a3-45fd-bd35-e8f856e61ba7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Field\Object\Gimmick\Cannon">
+      <UniqueIdentifier>{073cb453-b754-4cc8-b367-73e91aa9e28c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -1077,6 +1080,12 @@
     </ClCompile>
     <ClCompile Include="src\Game\CNumberFloor3.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Number</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CCannon.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Cannon</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CCannonBall.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Cannon</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1853,6 +1862,12 @@
     </ClInclude>
     <ClInclude Include="src\Game\CNumberFloor3.h">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Number</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CCannon.h">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Cannon</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CCannonBall.h">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Cannon</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
