--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -104,6 +104,7 @@
     <ClCompile Include="src\Game\CNumberFloor2.cpp" />
     <ClCompile Include="src\Game\CNumberFloor3.cpp" />
     <ClCompile Include="src\Game\CNumberFloorBase.cpp" />
+    <ClCompile Include="src\Game\COneShotFallCol.cpp" />
     <ClCompile Include="src\Game\COperationUI.cpp" />
     <ClCompile Include="src\Game\CPicoChanUI.cpp" />
     <ClCompile Include="src\Game\CPlayerAttack.cpp" />
@@ -368,6 +369,7 @@
     <ClInclude Include="src\Game\CNumberFloor2.h" />
     <ClInclude Include="src\Game\CNumberFloor3.h" />
     <ClInclude Include="src\Game\CNumberFloorBase.h" />
+    <ClInclude Include="src\Game\COneShotFallCol.h" />
     <ClInclude Include="src\Game\COperationUI.h" />
     <ClInclude Include="src\Game\CPicoChanUI.h" />
     <ClInclude Include="src\Game\CPlayerAttack.h" />
