--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -112,6 +112,8 @@
     <ClCompile Include="src\Game\CJumpingKinokoMove.cpp" />
     <ClCompile Include="src\Game\CJumpingKinokoMoveTo.cpp" />
     <ClCompile Include="src\Game\CMoveToNbFl1.cpp" />
+    <ClCompile Include="src\Game\CMoveToNbFl2.cpp" />
+    <ClCompile Include="src\Game\CMoveToNbFl3.cpp" />
     <ClCompile Include="src\Game\CNumberFloor2.cpp" />
     <ClCompile Include="src\Game\CNumberFloor3.cpp" />
     <ClCompile Include="src\Game\CNumberFloorBase.cpp" />
@@ -388,6 +390,8 @@
     <ClInclude Include="src\Game\CJumpingKinokoMove.h" />
     <ClInclude Include="src\Game\CJumpingKinokoMoveTo.h" />
     <ClInclude Include="src\Game\CMoveToNbFl1.h" />
+    <ClInclude Include="src\Game\CMoveToNbFl2.h" />
+    <ClInclude Include="src\Game\CMoveToNbFl3.h" />
     <ClInclude Include="src\Game\CNumberFloor2.h" />
     <ClInclude Include="src\Game\CNumberFloor3.h" />
     <ClInclude Include="src\Game\CNumberFloorBase.h" />
