--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -347,6 +347,9 @@
     <Filter Include="ソース ファイル\Game\Field\Object\Gimmick\DamageObj\Needle\Always">
       <UniqueIdentifier>{fb9d3c05-2393-4d40-9728-f0ce72f77231}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Field\Object\Gimmick\Number\MoveTo">
+      <UniqueIdentifier>{337109b9-950c-4bb4-b071-93409bbd7fbc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -1129,9 +1132,6 @@
     <ClCompile Include="src\Game\CCircleNbFlLeft3.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Number\Rotate\Circle</Filter>
     </ClCompile>
-    <ClCompile Include="src\Game\CMoveToNbFl1.cpp">
-      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Number\NumberFloorBase\Move</Filter>
-    </ClCompile>
     <ClCompile Include="src\Game\CNeedleLeftRight.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\DamageObj\Needle\Move</Filter>
     </ClCompile>
@@ -1140,6 +1140,15 @@
     </ClCompile>
     <ClCompile Include="src\Game\CAlwaysVerticalNeedle.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\DamageObj\Needle\Always</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CMoveToNbFl1.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Number\MoveTo</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CMoveToNbFl2.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Number\MoveTo</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CMoveToNbFl3.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Number\MoveTo</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1947,9 +1956,6 @@
     <ClInclude Include="src\Game\CCircleNbFlLeft3.h">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\Number\Rotate\Circle</Filter>
     </ClInclude>
-    <ClInclude Include="src\Game\CMoveToNbFl1.h">
-      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Number\NumberFloorBase\Move</Filter>
-    </ClInclude>
     <ClInclude Include="src\Game\CNeedleLeftRight.h">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\DamageObj\Needle\Move</Filter>
     </ClInclude>
@@ -1958,6 +1964,15 @@
     </ClInclude>
     <ClInclude Include="src\Game\CAlwaysVerticalNeedle.h">
       <Filter>ソース ファイル\Game\Field\Object\Gimmick\DamageObj\Needle\Always</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CMoveToNbFl1.h">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Number\MoveTo</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CMoveToNbFl2.h">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Number\MoveTo</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CMoveToNbFl3.h">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick\Number\MoveTo</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
